k8s/app/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-frontend-service
  namespace: kyc-blockchain-frontend
  labels:
    app.kubernetes.io/name: kyc-blockchain-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kyc-blockchain-frontend
