k8s/app/06-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kyc-frontend-ingress
  namespace: kyc-blockchain-frontend
  labels:
    app.kubernetes.io/name: kyc-blockchain-frontend
  annotations:
    # kubernetes.io/ingress.class: "traefik"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  # tls:
  # - hosts:
  #   - kyc.bunlong.uk
  #   secretName: kyc-frontend-tls-staging
  rules:
  - host: kyc.bunlong.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kyc-frontend-service
            port:
              number: 80
